--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -4,6 +4,92 @@
 @import url("https://fonts.googleapis.com/css?family=Croissant+One&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Cookie&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap");
+@keyframes dot--animation {
+  0% {
+    transform: translateX(-10px) scale(0);
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(10px) scale(1);
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(30px) scale(0);
+    opacity: 0;
+  }
+}
+.dot--animation > .btn__dot {
+  display: inline-block;
+  animation: dot--animation 2.5s infinite linear;
+}
+.dot--animation > .btn__dot:nth-child(1) {
+  animation-delay: 0.6s;
+}
+.dot--animation > .btn__dot:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.dot--animation > .btn__dot:nth-child(3) {
+  animation-delay: 0s;
+}
+
+.zoom__menu:hover {
+  transform: scale(1.2);
+  opacity: 0.5;
+}
+
+.zoom__menu--papilles:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+.zoom__menu--gout:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+@keyframes btn--shake {
+  0% {
+    transform: translateX(1%);
+  }
+  1% {
+    transform: translateX(-1%);
+  }
+  2% {
+    transform: translateX(1%);
+  }
+  3% {
+    transform: translateX(-1%);
+  }
+  4% {
+    transform: translateX(1%);
+  }
+  5% {
+    transform: translateX(-1%);
+  }
+  6% {
+    transform: translateX(1%);
+  }
+  7% {
+    transform: translateX(-1%);
+  }
+  7%, 100% {
+    transform: translateX(0);
+  }
+}
+.anim-underline {
+  text-decoration: none;
+  background: linear-gradient(to top, #000 0%, #000 10%, transparent 10.01%) no-repeat left bottom/0 100%;
+  transition: background-size 0.3s;
+}
+.anim-underline:hover {
+  background-size: 100% 100%;
+}
+
 body {
   margin: 0;
   font-family: arial, sans-serif;
@@ -32,12 +118,20 @@ td {
   padding-bottom: 0.3rem;
   text-align: center;
 }
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  .header {
+    font-size: 3vw;
+  }
+}
 
 .footer {
   background: #579c87;
   color: #fdcb46;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 .footer__list {
   padding-left: 20px;
@@ -47,35 +141,41 @@ td {
   list-style: none;
   font-size: 4vw;
 }
-
-.double-line {
-  position: relative;
-  overflow: hidden;
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  .footer__list {
+    font-size: 2vw;
+  }
 }
-.double-line span {
-  display: inline-block;
-  vertical-align: baseline;
-  zoom: 1;
-  *display: inline;
-  *vertical-align: auto;
-  position: relative;
-  padding: 0 5rem;
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+  .footer__list {
+    font-size: 3vw;
+  }
 }
-.double-line span:before, .double-line span:after {
-  content: " ";
-  display: block;
-  width: 4000px;
-  position: absolute;
-  top: 50%;
-  border-top: 2px solid black;
+.footer__list a {
+  color: #fdcb46;
+  animation: btn--shake 5s infinite;
 }
-.double-line span:before {
-  right: 100%;
-}
-.double-line span:after {
-  left: 100%;
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  .footer {
+    padding: 0;
+  }
 }
 
+@media (max-device-width: 767.98px), (min-device-width: 768px) and (max-device-width: 991.98px), (min-device-width: 991px) and (max-width: 991px) {
+  .menus__card {
+    width: 90%;
+    height: 350px;
+  }
+}
+@media (max-device-width: 767.98px) {
+  /*phone*/
+}
+@media (min-device-width: 768px) and (max-device-width: 991.98px) {
+  /*tablet*/
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  /*PC medium screen*/
+}
 /*font-family: devonshire (enchantee), menu segoe print*/
 /*font-family: 'Croissant One' (alafrancaise), Menu Cambria*/
 /*font-family: cookie (papilles)*/
@@ -92,6 +192,7 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   font-size: 3.5vw;
+  padding-bottom: 15vw;
 }
 .menus__card {
   width: 45%;
@@ -103,10 +204,15 @@ a {
   flex-direction: column;
   justify-content: center;
 }
-@media screen and (min-device-width: 991px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-width: 991px) {
   .menus__card {
     width: 90%;
     height: 350px;
+  }
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  .menus__card {
+    height: 500px;
   }
 }
 .menus__card--orange {
@@ -138,6 +244,11 @@ a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+  .font__title--alafrancaise {
+    font-size: 4vw;
+  }
+}
 .font__title--papilles {
   font-family: "cookie";
   font-weight: normal;
@@ -146,6 +257,11 @@ a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+  .font__title--papilles {
+    font-size: 8vw;
+  }
+}
 .font__title--gout {
   font-family: "kaushan script";
   font-weight: normal;
@@ -153,6 +269,11 @@ a {
   background: -webkit-linear-gradient(-80deg, #41963c 0%, #80cb5e 50%, #beff7f 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+  .font__title--gout {
+    font-size: 7vw;
+  }
 }
 .font__subtitle--enchantee {
   font-family: "Segoe Print";
@@ -173,6 +294,13 @@ a {
   color: #41963c;
 }
 
+.zoom__menu {
+  transition: all 1s;
+}
+.zoom__menu--papilles, .zoom__menu--gout {
+  transition: all 1s;
+}
+
 .btn--soon {
   width: 45%;
   background: #579c87;
@@ -184,6 +312,45 @@ a {
   padding: 0.8rem;
   margin: 2rem;
   border: none;
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  .btn--soon {
+    width: 25%;
+    font-size: 2vw;
+    margin: 1rem;
+  }
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+  .btn--soon {
+    font-size: 3vw;
+    width: 35%;
+  }
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 768px) {
+  .btn--soon {
+    font-size: 3vw;
+    width: 40%;
+  }
+}
+.btn__dot {
+  height: 25px;
+  width: 25px;
+  background-color: #fdcb46;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 10px;
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) {
+  .btn__dot {
+    height: 15px;
+    width: 15px;
+  }
+}
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+  .btn__dot {
+    height: 7px;
+    width: 7px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
