--- a/Projets/OhMyFood/scss/main.scss
+++ b/Projets/OhMyFood/scss/main.scss
@@ -1,12 +1,15 @@
 @import "./partials/Utils/variables";
 @import "./partials/Utils/mixins";
+@import "./partials/Components/animations";
 @import "./partials/Base/base";
+@import "./partials/Layouts/responsive";
+
 @import url('https://fonts.googleapis.com/css?family=Devonshire&display=swap'); /*font-family: devonshire (enchantee), menu segoe print*/
 @import url('https://fonts.googleapis.com/css?family=Croissant+One&display=swap'); /*font-family: 'Croissant One' (alafrancaise), Menu Cambria*/
 @import url('https://fonts.googleapis.com/css?family=Cookie&display=swap'); /*font-family: cookie (papilles)*/
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap'); /*font-family: Kaushan script (gout) */
 
-a {
+a { 
 	display:block;
 	color: #000;
 	text-decoration: none;
@@ -18,6 +21,7 @@ a {
 	justify-content: center;
 	flex-wrap: wrap;
 	font-size:3.5vw;
+	padding-bottom: 15vw;
 	&__card {
 		width:45%;
 		height: 750px;
@@ -27,9 +31,12 @@ a {
 		display:flex;
 		flex-direction: column;
 		justify-content: center;
-		@media screen and (min-device-width: 991px) and (max-width: 991px) {
-			width: 90%;
-			height: 350px;
+		@media (min-device-width: 991px) and (max-width: 991px) {
+			width : 90%;
+			height : 350px;
+		}
+		@media (min-device-width:991px) and (max-device-width:1280px) {
+			height: 500px;
 		}
 		&--orange {
 			background: map-get($colour-card, enchantee);
@@ -59,7 +66,11 @@ a {
 			background: -webkit-linear-gradient(-80deg, map-get($colour-text-alafrancaise, first-title) 0%,map-get($colour-text-alafrancaise, secund) 50%, map-get($colour-text-alafrancaise, last-title) 100%);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
-		}
+			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+					font-size: 4vw;
+				}
+			}
+		
 		&--papilles {
 			font-family: 'cookie';
 			font-weight: normal;
@@ -67,6 +78,9 @@ a {
 			background: -webkit-linear-gradient(-80deg, map-get($colour-text-papilles, first) 0%,map-get($colour-text-papilles, secund) 50%, map-get($colour-text-papilles, third) 100%);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
+			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+				font-size: 8vw;
+			}
 		}
 		&--gout {
 			font-family: 'kaushan script';
@@ -75,6 +89,9 @@ a {
 			background: -webkit-linear-gradient(-80deg, map-get($colour-text-gout, first) 0%,map-get($colour-text-gout, secund) 50%, map-get($colour-text-gout, third) 100%);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
+			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+				font-size: 7vw;
+			}
 		}
 	}
 	&__subtitle {
@@ -100,6 +117,13 @@ a {
 	}
 }
 
+.zoom__menu {
+	transition: all 1s;
+	&--papilles, &--gout {
+		transition: all 1s;
+	}
+}
+
 .btn {
 	&--soon {
 	width: 45%;
@@ -109,5 +133,36 @@ a {
 	padding: 0.8rem;
 	margin: 2rem;
 	border: none;
+	@media (min-device-width:991px) and (max-device-width:1280px) {
+		width: 25%;
+		font-size: 2vw;
+		margin: 1rem;
+		@media (max-width:991px) {
+			font-size: 3vw;
+			width: 35%;
+		}
+		@media (max-width:768px) 
+			{
+				font-size: 3vw;
+				width:40%;
+			}
+	}
+	}
+	&__dot {
+		height: 25px;
+		width: 25px;
+		background-color: #fdcb46;
+		border-radius: 50%;
+		display: inline-block;
+		margin: 10px;
+		@media (min-device-width:991px) and (max-device-width:1280px) {
+			height: 15px;
+		width: 15px;
+			@media (max-width:991px) 
+			{
+				height:7px;
+				width:7px;
+			}
+		}
 	}
 }
