--- a/Projets/OhMyFood/css/style-menu-alafrancaise.css
+++ b/Projets/OhMyFood/css/style-menu-alafrancaise.css
@@ -209,13 +209,14 @@ tr {
   font-family: Cambria;
   margin-bottom: 15rem;
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px), (max-device-width: 991px) {
   .font__table--alafrancaise {
+    margin: 0;
     font-size: 2.5vw;
     margin-bottom: 10rem;
   }
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) and (max-width: 768px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) and (max-width: 768px), (max-device-width: 991px) and (max-width: 768px) {
   .font__table--alafrancaise {
     margin-bottom: 5rem;
   }
@@ -238,7 +239,7 @@ tr {
   text-align: left;
   padding-left: 5rem;
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px), (max-device-width: 991px) {
   .table__cell--left {
     padding-left: 1.3vw;
     padding-right: 4rem;
@@ -249,7 +250,7 @@ tr {
   font-weight: bold;
   padding-right: 5rem;
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px), (max-device-width: 991px) {
   .table__cell--right {
     padding-right: 1.3vw;
   }
