--- a/Projets/OhMyFood/css/style-menu-papilles.css
+++ b/Projets/OhMyFood/css/style-menu-papilles.css
@@ -212,7 +212,7 @@ tr {
   font-family: "Segoe Print";
   margin-bottom: 11rem;
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px), (max-device-width: 991px) {
   .font__table--papilles {
     margin: 0;
     font-size: 2.4vw;
@@ -231,7 +231,7 @@ tr {
   text-align: left;
   padding-left: 5rem;
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px), (max-device-width: 991px) {
   .table__cell--left {
     padding-left: 1rem;
     padding-right: 10vw;
@@ -242,7 +242,7 @@ tr {
   font-weight: bold;
   padding-right: 5rem;
 }
-@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px) {
+@media (min-device-width: 991px) and (max-device-width: 1280px) and (max-width: 991px), (max-device-width: 991px) {
   .table__cell--right {
     padding-right: 1rem;
   }
