--- a/Projets/OhMyFood/scss/Partials/Pages/menu-alafrancaise.scss
+++ b/Projets/OhMyFood/scss/Partials/Pages/menu-alafrancaise.scss
@@ -48,7 +48,8 @@ tr {
 			font-size: 2.05vw;
             font-family: Cambria;
             margin-bottom: 15rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
+                margin: 0;
                 font-size: 2.5vw;
                 margin-bottom: 10rem;
                 @media (max-width:768px) {
@@ -81,7 +82,7 @@ tr {
         &--left {
             text-align: left;
             padding-left: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
                 padding-left: 1.3vw;
                 padding-right: 4rem;
             }
@@ -90,7 +91,7 @@ tr {
             text-align: right;
             font-weight: bold;
             padding-right: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
                 padding-right: 1.3vw;
             }
         }
