--- a/Projets/OhMyFood/scss/Partials/Pages/menu-gout.scss
+++ b/Projets/OhMyFood/scss/Partials/Pages/menu-gout.scss
@@ -49,7 +49,7 @@ th {font-size: 2vw;}
 		font-size: 1.6vw;
         font-family: "Segoe Print";
         margin-bottom: 11rem;
-        @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+        @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
             margin: 0;
             font-size: 2.4vw;
         }
@@ -66,7 +66,7 @@ th {font-size: 2vw;}
         &--left {
             text-align: left;
             padding-left: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
                 padding-left: 1rem;
                 padding-right: 10vw;
 			}
@@ -75,7 +75,7 @@ th {font-size: 2vw;}
             text-align: right;
             font-weight: bold;
             padding-right: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
 				padding-right: 1rem;
 			}
         }
