--- a/Projets/OhMyFood/scss/Partials/Pages/menu-papilles.scss
+++ b/Projets/OhMyFood/scss/Partials/Pages/menu-papilles.scss
@@ -47,7 +47,7 @@ tr {
 		font-size: 1.7vw;
         font-family: "Segoe Print";
         margin-bottom: 11rem;
-        @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+        @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
             margin: 0;
             font-size: 2.4vw;
         }
@@ -68,7 +68,7 @@ tr {
         &--left {
             text-align: left;
             padding-left: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
                 padding-left: 1rem;
                 padding-right: 10vw;
 			}
@@ -77,7 +77,7 @@ tr {
             text-align: right;
             font-weight: bold;
             padding-right: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
+            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
 				padding-right: 1rem;
 			}
 
