migration des propriété des <a> depuis main.scss dans _base.scss

--- a/Projets/OhMyFood/scss/Partials/Base/_base.scss
+++ b/Projets/OhMyFood/scss/Partials/Base/_base.scss
@@ -3,6 +3,11 @@ body {
 	font-family: arial, sans-serif;
 	font-size: 4vw;
 }
+a { 
+	display:block;
+	color: #000;
+	text-decoration: none;
+}
 
 img {
 	display:inline-block;
