--- a/Projets/OhMyFood/css/style-menu-enchantee.css
+++ b/Projets/OhMyFood/css/style-menu-enchantee.css
@@ -7,6 +7,12 @@ body {
   font-size: 4vw;
 }
 
+a {
+  display: block;
+  color: #000;
+  text-decoration: none;
+}
+
 img {
   display: inline-block;
   max-width: 15%;
