--- a/Projets/OhMyFood/scss/Partials/Components/_animations.scss
+++ b/Projets/OhMyFood/scss/Partials/Components/_animations.scss
@@ -34,8 +34,11 @@
       }
     }
 }
-
-.zoom__menu:hover {
+.zoom__menu--enchantee:hover {
+    transform: scale(1.1);
+    opacity:0.5;
+}
+.zoom__menu--alafrancaise:hover {
     transform: scale(1.2);
     opacity:0.5;
 }
