--- a/Projets/OhMyFood/scss/Partials/Pages/menu-alafrancaise.scss
+++ b/Projets/OhMyFood/scss/Partials/Pages/menu-alafrancaise.scss
@@ -18,7 +18,7 @@
         margin: 0;
         padding: 3.9vw;
         text-align: center;
-        box-shadow: 0 0 1rem #ededed;
+        box-shadow: 0 0 1rem #dad8d8;
         display:flex;
         flex-direction: column;
         justify-content: center;
@@ -27,6 +27,7 @@
 
 .font {
     font-weight: normal;
+    font-family: "arial black";
     &__title{
         &--alafrancaise {
             font-size: 3vw;
