--- a/Projets/OhMyFood/scss/Partials/Utils/_mixins.scss
+++ b/Projets/OhMyFood/scss/Partials/Utils/_mixins.scss
@@ -5,8 +5,8 @@
 @mixin main-style {
 	background: $colour-primary;
 	color: $colour-secondary;
-	padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
+	padding-top: 0.1vw;
+    padding-bottom: 0.1vw;
 }
 
 @mixin menu-details {
@@ -19,4 +19,8 @@
         width:100%;
         margin: 0;
     }
+}
+
+@mixin zoom-menu { 
+	transition: all 1s;
 }
