--- a/Projets/OhMyFood/scss/main.scss
+++ b/Projets/OhMyFood/scss/main.scss
@@ -15,23 +15,30 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	font-size:3.5vw;
-	padding-bottom: 15vw;
+	@media (min-device-width:1200px) and (orientation: landscape) {
+		margin-bottom: 8vw;
+	}
 	&__card {
-		width:45%;
+		width:40%;
 		height: 750px;
 		margin: 1rem;
+		padding:1vw;
 		text-align: center;
-		box-shadow: 0 0 1rem #ededed;
+		box-shadow: 0 0 1rem #dad8d8;
 		display:flex;
 		flex-direction: column;
 		justify-content: center;
-		@media (min-device-width: 991px) and (max-width: 991px) {
+		@media (min-device-width: 992px) and (orientation: landscape) {
+			width: 20%;
+			height: 25vw;
+		}
+		@media (min-device-width:1280px) and (orientation: portrait) {
+			height: 60%;
+		}
+		/*@media (min-device-width: 991px) and (max-width: 991px) {
 			width : 90%;
 			height : 350px;
-		}
-		@media (min-device-width:991px) and (max-device-width:1280px) {
-			height: 500px;
-		}
+		}*/
 		&--orange {
 			background: map-get($colour-card, enchantee);
 		}
@@ -53,42 +60,45 @@
 		margin: 0;
 		&--enchantee {
 			font-family: 'Devonshire';
+			font-size: 3vw;
 		}
 		&--alafrancaise {
-			font-size: 3vw;
+			font-size: 2vw;
 			font-family: 'Croissant One';
 			background: -webkit-linear-gradient(-80deg, map-get($colour-text-alafrancaise, first-title) 0%,map-get($colour-text-alafrancaise, secund) 50%, map-get($colour-text-alafrancaise, last-title) 100%);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
-					font-size: 4vw;
+					font-size: 2vw;
 				}
 			}
 		
 		&--papilles {
 			font-family: 'cookie';
 			font-weight: normal;
-			font-size: 6vw;
+			font-size: 3vw;
 			background: -webkit-linear-gradient(-80deg, map-get($colour-text-papilles, first) 0%,map-get($colour-text-papilles, secund) 50%, map-get($colour-text-papilles, third) 100%);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
+			
 			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
-				font-size: 8vw;
+				font-size: 4.5vw;
 			}
 		}
 		&--gout {
 			font-family: 'kaushan script';
 			font-weight: normal;
-			font-size: 5vw;
+			font-size: 2.5vw;
 			background: -webkit-linear-gradient(-80deg, map-get($colour-text-gout, first) 0%,map-get($colour-text-gout, secund) 50%, map-get($colour-text-gout, third) 100%);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
-				font-size: 7vw;
+				font-size: 4.5vw;
 			}
 		}
 	}
 	&__subtitle {
+		font-size:2vw;
 		&--enchantee {
 			font-family:'Segoe Print';
 			font-weight: bold;
@@ -110,11 +120,9 @@
 		}
 	}
 }
-
 .zoom__menu {
-	transition: all 1s;
-	&--papilles, &--gout {
-		transition: all 1s;
+	&--enchantee,&--alafrancaise,&--papilles,&--gout {
+		@include zoom-menu;
 	}
 }
 
@@ -125,9 +133,14 @@
 	border-radius: 15px;
 	font-size: 4vw;
 	padding: 0.8rem;
-	margin: 2rem;
+	margin: 2.6vw;
 	border: none;
-	@media (min-device-width:991px) and (max-device-width:1280px) {
+	@media (min-device-width: 992px) and (orientation: landscape) {
+		width: 25%;
+		font-size: 2vw;
+				
+	}
+	@media (min-device-width:991px) and (max-device-width:1200px) {
 		width: 25%;
 		font-size: 2vw;
 		margin: 1rem;
@@ -149,9 +162,14 @@
 		border-radius: 50%;
 		display: inline-block;
 		margin: 10px;
+		@media (min-device-width: 992px) and (orientation: landscape) {
+			height:20px;
+			width:20px;
+		}
+
 		@media (min-device-width:991px) and (max-device-width:1280px) {
 			height: 15px;
-		width: 15px;
+			width: 15px;
 			@media (max-width:991px) 
 			{
 				height:7px;
