--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -212,7 +212,7 @@ td {
 /*font-family: cookie (papilles)*/
 /*font-family: Kaushan script (gout) */
 .menus {
-  padding: 2rem 3rem 2rem 3rem;
+  padding: 2.6vw 3.9vw 2.6vw 3.9vw;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -225,11 +225,11 @@ td {
 }
 .menus__card {
   width: 45%;
-  height: 750px;
-  margin: 1rem;
+  height: 40vw;
+  margin: 1.3vw;
   padding: 1vw;
   text-align: center;
-  box-shadow: 0 0 1rem #dad8d8;
+  box-shadow: 0 0 1.3vw #dad8d8;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -316,7 +316,7 @@ td {
 .font__subtitle--enchantee {
   font-family: "Segoe Print";
   font-weight: bold;
-  margin-top: 1rem;
+  margin-top: 1.3vw;
 }
 .font__subtitle--alafrancaise {
   font-family: "Cambria";
@@ -344,7 +344,7 @@ td {
   padding-bottom: 0.1vw;
   border-radius: 15px;
   font-size: 4vw;
-  padding: 0.8rem;
+  padding: 1.04vw;
   margin: 2.6vw;
   border: none;
 }
@@ -358,7 +358,7 @@ td {
   .btn--soon {
     width: 25%;
     font-size: 2vw;
-    margin: 1rem;
+    margin: 1.3vw;
   }
 }
 @media (min-device-width: 991px) and (max-device-width: 1200px) and (max-width: 991px) {
