--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -250,14 +250,13 @@ td {
 }
 @media (orientation: landscape) {
   .menus__card {
-    width: 20%;
+    width: 15%;
     height: 20vw;
-    padding: 5.2vw;
+    padding: 1.3vw;
   }
 }
-@media (min-device-width: 992px) and (orientation: landscape) {
+@media (orientation: landscape) and (min-device-width: 992px) {
   .menus__card {
-    width: 20%;
     height: 25vw;
   }
 }
